--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,83 +1,50 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
+@article{https://doi.org/10.1002/slct.201800101,
+  abbr={Membrane Separations},
   bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,},
-  preview={brownian-motion.gif}
+  author = {Ethirajan, Sudheesh Kumar and Sengupta, Arijit and Jebur, Mahmood and Kamaz, Mohanad and Qian, Xianghong and Wickramasinghe, Ranil},
+  title = {Single-Step Synthesis of Novel Polyionic Liquids Having Antibacterial Activity and Showing π-Electron Mediated Selectivity in Separation of Aromatics},
+  journal = {ChemistrySelect},
+  volume = {3},
+  number = {17},
+  pages = {4959-4968},
+  keywords = {Aggregation, Antibacterial activity, Colony forming unit, Polyionic liquids, Structural characterization},
+  doi = {https://doi.org/10.1002/slct.201800101},
+  url = {https://chemistry-europe.onlinelibrary.wiley.com/doi/abs/10.1002/slct.201800101},
+  eprint = {https://chemistry-europe.onlinelibrary.wiley.com/doi/pdf/10.1002/slct.201800101},
+  abstract = {Abstract One-pot synthesis of polyionic liquids (PILs) from pyridinium and phosphonium family was reported in the present investigation. The size exclusion chromatographic (SEC) method was employed for the determination of the molecular weight of the polymer and the dispersity during synthesis. The aggregation behavior of these PILs was investigated in polar- protic, polar- aprotic and apolar-aprotic solvents. The FTIR spectroscopic analysis was utilized for the characterization of the functional groups in PILs, whereas 1H-NMR analysis was employed for structural characterization of the PILs in terms of the existence of magnetically non-equivalent protons. UV-Vis spectroscopic characterization was also employed for these PILs. The anti-bacterial activity of these PILs were investigated using two gram positive bacteria staphylococcus aureus and pseudomonas aeruginosa. Plate reader method was used to determine the ratio of live to dead bacterial cell in presence of PILs as a function of time by monitoring the fluorescence wave length of the corresponding cells after tagging them suitably with the appropriate dye. The plate counting method was also employed for the direct counting of the number of colony of the bacteria as a function of time in presence of the synthesized PILs. A π-electron mediated separation was found to bring the selectivity in sorption of aromatics on these PILs.},
+  year = {2018}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
+@article{SENGUPTA2019307,
+  abbr={Membrane Separations},
   bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics,},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers,}
+  title = {Synthesis and characterization of antibacterial poly ionic liquid membranes with tunable performance},
+  journal = {Separation and Purification Technology},
+  volume = {212},
+  pages = {307-315},
+  year = {2019},
+  issn = {1383-5866},
+  doi = {https://doi.org/10.1016/j.seppur.2018.11.027},
+  url = {https://www.sciencedirect.com/science/article/pii/S1383586618309341},
+  author = {Arijit Sengupta and Sudheesh {Kumar Ethirajan} and Mohanad Kamaz and Mahmood Jebur and Ranil Wickramasinghe},
+  keywords = {PIL membranes, Antibacterial activity, Surface characterization, NMR spectra, Protein rejection},
+  abstract = {A simple two step synthetic methodology was developed for the fabrication of poly (ionic liquid) (PIL) membranes. Appropriate substituent on imidazolium ring was found to bring tunability in the properties and performance of the resulting membranes. FTIR was employed to identify the functional groups on the membranes, while microscopic imaging techniques (AFM and SEM) were used to investigate the surface morphology. Different substituents on the imidazolium ring were found to form membranes having different pore size. 1H and 13C NMR were extensively utilized to characterize PIL membranes. The surface charge of the PIL membranes can be tuned by the pH of the feed solution. These PIL membranes exhibited antimicrobial activity against gram positive bacteria (staphylococcus aureus and pseudomonas aeruginosa). The antibacterial activity was also found to depend on the nature of substituents of imidazolium ring. Stable water flux (correspond to ultrafiltration and microfiltration membranes) was obtained after pre-compaction of the membranes. Longer UV irradiation was found to form nanofiltration membranes. The performance of these PIL membranes were systematically evaluated by protein (dextran and bovine serum albumin) rejection.}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.,},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  selected={true}
-}
-
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik,},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.,},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@book{przibram1967letters,
+@incollection{PRICE2022,
+  abbr={Surface Catalysis},
   bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
+  title = {An Introductory Primer for Modeling Atomically Dispersed Catalysts using Density Functional Theory},
+  booktitle = {Reference Module in Chemistry, Molecular Sciences and Chemical Engineering},
+  publisher = {Elsevier},
+  year = {2022},
+  isbn = {978-0-12-409547-2},
+  doi = {https://doi.org/10.1016/B978-0-12-821978-2.00044-1},
+  url = {https://www.sciencedirect.com/science/article/pii/B9780128219782000441},
+  author = {Trevor Price and Rachita Rana and Sudheesh K. Ethirajan and Sam J. Holton and Ambarish R. Kulkarni},
+  keywords = {Atomic simulation, Atomically dispersed catalysts, Benchmarking, CO FTIR, Computational catalysis, Density functional theory (DFT), Heterogeneous catalysis, QuantEXAFS, Single site catalysts (SSC), Single-atom catalysts (SAC)},
+  abstract = {Recognizing the continuing popularity of atomically dispersed (also called “single atom”) catalysts and the central role played by theory and modeling in understanding these materials, the overall goal of this Chapter is to provide an introductory primer for early-stage graduate students entering this exciting research domain. By providing a scientific overview of a few key publications from our group and others, this Chapter aims to explain and contextualize the research philosophy underlying each study. Specifically, we emphasize the importance of the three Ms (the Method, the Model(s), and the Metrics) as the foundation for high-fidelity computational investigations of atomically dispersed catalysts. Although written with an early career “theory student” in mind, this Chapter provides a useful (but not exhaustive) overview of the capabilities and limitations of the current approaches within computational catalysis. We hope that the core concepts and the research philosophy discussed in this Chapter will also be relevant for experimentalists that frequently collaborate with theoreticians within the catalysis science community.}
 }
