try scholar links

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,8 +2,9 @@
 ---
 
 @article{https://doi.org/10.1002/slct.201800101,
-  abbr={Membrane Separations},
+  abbr={Separations},
   bibtex_show={true},
+  html={https://chemistry-europe.onlinelibrary.wiley.com/doi/10.1002/slct.201800101},
   author = {Ethirajan, Sudheesh Kumar and Sengupta, Arijit and Jebur, Mahmood and Kamaz, Mohanad and Qian, Xianghong and Wickramasinghe, Ranil},
   title = {Single-Step Synthesis of Novel Polyionic Liquids Having Antibacterial Activity and Showing π-Electron Mediated Selectivity in Separation of Aromatics},
   journal = {ChemistrySelect},
@@ -19,8 +20,9 @@
 }
 
 @article{SENGUPTA2019307,
-  abbr={Membrane Separations},
+  abbr={Separations},
   bibtex_show={true},
+  html={https://www.sciencedirect.com/science/article/pii/S1383586618309341?via%3Dihub},
   title = {Synthesis and characterization of antibacterial poly ionic liquid membranes with tunable performance},
   journal = {Separation and Purification Technology},
   volume = {212},
@@ -29,14 +31,15 @@
   issn = {1383-5866},
   doi = {https://doi.org/10.1016/j.seppur.2018.11.027},
   url = {https://www.sciencedirect.com/science/article/pii/S1383586618309341},
-  author = {Arijit Sengupta and Sudheesh {Kumar Ethirajan} and Mohanad Kamaz and Mahmood Jebur and Ranil Wickramasinghe},
+  author = {Arijit Sengupta and Sudheesh Kumar Ethirajan and Mohanad Kamaz and Mahmood Jebur and Ranil Wickramasinghe},
   keywords = {PIL membranes, Antibacterial activity, Surface characterization, NMR spectra, Protein rejection},
   abstract = {A simple two step synthetic methodology was developed for the fabrication of poly (ionic liquid) (PIL) membranes. Appropriate substituent on imidazolium ring was found to bring tunability in the properties and performance of the resulting membranes. FTIR was employed to identify the functional groups on the membranes, while microscopic imaging techniques (AFM and SEM) were used to investigate the surface morphology. Different substituents on the imidazolium ring were found to form membranes having different pore size. 1H and 13C NMR were extensively utilized to characterize PIL membranes. The surface charge of the PIL membranes can be tuned by the pH of the feed solution. These PIL membranes exhibited antimicrobial activity against gram positive bacteria (staphylococcus aureus and pseudomonas aeruginosa). The antibacterial activity was also found to depend on the nature of substituents of imidazolium ring. Stable water flux (correspond to ultrafiltration and microfiltration membranes) was obtained after pre-compaction of the membranes. Longer UV irradiation was found to form nanofiltration membranes. The performance of these PIL membranes were systematically evaluated by protein (dextran and bovine serum albumin) rejection.}
 }
 
 @incollection{PRICE2022,
-  abbr={Surface Catalysis},
+  abbr={Catalysis},
   bibtex_show={true},
+  html={https://www.sciencedirect.com/science/article/pii/B9780128219782000441?via%3Dihub},
   title = {An Introductory Primer for Modeling Atomically Dispersed Catalysts using Density Functional Theory},
   booktitle = {Reference Module in Chemistry, Molecular Sciences and Chemical Engineering},
   publisher = {Elsevier},
