--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -15,7 +15,7 @@
   doi = {https://doi.org/10.1002/slct.201800101},
   url = {https://chemistry-europe.onlinelibrary.wiley.com/doi/abs/10.1002/slct.201800101},
   eprint = {https://chemistry-europe.onlinelibrary.wiley.com/doi/pdf/10.1002/slct.201800101},
-  abstract = {Abstract One-pot synthesis of polyionic liquids (PILs) from pyridinium and phosphonium family was reported in the present investigation. The size exclusion chromatographic (SEC) method was employed for the determination of the molecular weight of the polymer and the dispersity during synthesis. The aggregation behavior of these PILs was investigated in polar- protic, polar- aprotic and apolar-aprotic solvents. The FTIR spectroscopic analysis was utilized for the characterization of the functional groups in PILs, whereas 1H-NMR analysis was employed for structural characterization of the PILs in terms of the existence of magnetically non-equivalent protons. UV-Vis spectroscopic characterization was also employed for these PILs. The anti-bacterial activity of these PILs were investigated using two gram positive bacteria staphylococcus aureus and pseudomonas aeruginosa. Plate reader method was used to determine the ratio of live to dead bacterial cell in presence of PILs as a function of time by monitoring the fluorescence wave length of the corresponding cells after tagging them suitably with the appropriate dye. The plate counting method was also employed for the direct counting of the number of colony of the bacteria as a function of time in presence of the synthesized PILs. A π-electron mediated separation was found to bring the selectivity in sorption of aromatics on these PILs.},
+  abstract = {One-pot synthesis of polyionic liquids (PILs) from pyridinium and phosphonium family was reported in the present investigation. The size exclusion chromatographic (SEC) method was employed for the determination of the molecular weight of the polymer and the dispersity during synthesis. The aggregation behavior of these PILs was investigated in polar- protic, polar- aprotic and apolar-aprotic solvents. The FTIR spectroscopic analysis was utilized for the characterization of the functional groups in PILs, whereas 1H-NMR analysis was employed for structural characterization of the PILs in terms of the existence of magnetically non-equivalent protons. UV-Vis spectroscopic characterization was also employed for these PILs. The anti-bacterial activity of these PILs were investigated using two gram positive bacteria staphylococcus aureus and pseudomonas aeruginosa. Plate reader method was used to determine the ratio of live to dead bacterial cell in presence of PILs as a function of time by monitoring the fluorescence wave length of the corresponding cells after tagging them suitably with the appropriate dye. The plate counting method was also employed for the direct counting of the number of colony of the bacteria as a function of time in presence of the synthesized PILs. A π-electron mediated separation was found to bring the selectivity in sorption of aromatics on these PILs.},
   year = {2018}
 }
 
