try first_name for scholar

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,6 +5,7 @@
   abbr={Separations},
   bibtex_show={true},
   html={https://chemistry-europe.onlinelibrary.wiley.com/doi/10.1002/slct.201800101},
+  preview={},
   author = {Ethirajan, Sudheesh Kumar and Sengupta, Arijit and Jebur, Mahmood and Kamaz, Mohanad and Qian, Xianghong and Wickramasinghe, Ranil},
   title = {Single-Step Synthesis of Novel Polyionic Liquids Having Antibacterial Activity and Showing π-Electron Mediated Selectivity in Separation of Aromatics},
   journal = {ChemistrySelect},
@@ -23,6 +24,7 @@
   abbr={Separations},
   bibtex_show={true},
   html={https://www.sciencedirect.com/science/article/pii/S1383586618309341?via%3Dihub},
+  preview={},
   title = {Synthesis and characterization of antibacterial poly ionic liquid membranes with tunable performance},
   journal = {Separation and Purification Technology},
   volume = {212},
@@ -39,6 +41,7 @@
 @incollection{PRICE2022,
   abbr={Catalysis},
   bibtex_show={true},
+  preview={},
   html={https://www.sciencedirect.com/science/article/pii/B9780128219782000441?via%3Dihub},
   title = {An Introductory Primer for Modeling Atomically Dispersed Catalysts using Density Functional Theory},
   booktitle = {Reference Module in Chemistry, Molecular Sciences and Chemical Engineering},
