--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -24,7 +24,7 @@
   abbr={Separations},
   bibtex_show={true},
   html={https://www.sciencedirect.com/science/article/pii/S1383586618309341?via%3Dihub},
-  preview={},
+  preview={pils-membranes.jpg},
   title = {Synthesis and characterization of antibacterial poly ionic liquid membranes with tunable performance},
   journal = {Separation and Purification Technology},
   volume = {212},
@@ -41,7 +41,7 @@
 @incollection{PRICE2022,
   abbr={Catalysis},
   bibtex_show={true},
-  preview={},
+  preview={atomically-dispersed-catalysts-primer.gif},
   html={https://www.sciencedirect.com/science/article/pii/B9780128219782000441?via%3Dihub},
   title = {An Introductory Primer for Modeling Atomically Dispersed Catalysts using Density Functional Theory},
   booktitle = {Reference Module in Chemistry, Molecular Sciences and Chemical Engineering},
