use new resolution files

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,7 +3,7 @@
 
 @article{https://doi.org/10.1002/slct.201800101,
   abbr={Separations},
-  preview={pils_synthesis.gif},
+  preview={pils_synthesis_new_reduce.gif},
   bibtex_show={true},
   html={https://chemistry-europe.onlinelibrary.wiley.com/doi/10.1002/slct.201800101},
   author = {Ethirajan, Sudheesh Kumar and Sengupta, Arijit and Jebur, Mahmood and Kamaz, Mohanad and Qian, Xianghong and Wickramasinghe, Ranil},
@@ -22,7 +22,7 @@
 
 @article{SENGUPTA2019307,
   abbr={Separations},
-  preview={pils_membranes.gif},
+  preview={pils_membranes_new_reduce.gif},
   bibtex_show={true},
   html={https://www.sciencedirect.com/science/article/pii/S1383586618309341?via%3Dihub},
   title = {Synthesis and characterization of antibacterial poly ionic liquid membranes with tunable performance},
